--- a/index.html
+++ b/index.html
@@ -11,42 +11,34 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
-    <div class="content">
-      <br>
-      <div class="container">
-        <div class="intro_card">
-          <h1 class="glow">Web Developer Warren</h1>
-            <div class="profilepic-container">
-              <img class="profilepic" src="./images/PXL_20210531_204914235.MP.jpg" alt="Profile picture">
-              <img class="profilepic-hover" src="./images/HQRMNwDxExd92PMSb2VR--2--bhix6_4x.jpg" alt=" 2nd Profile picture">
-            </div>
-          <h2 class="glow">I love lamp!</h2>
-          <a href="https://github.com/Wisbeach"><button class="fingerprint-button" onclick="this.textContent = 'You got me!'"><img src="./images/fingerprint2.png" alt="Fingerprint"/></button></a>
-        </div>
-      </div>
-
-        <div class="middle_card">
-            <p> I’ve come to realize over the years that the work I’ve been involved with has always consisted of elements of conceptualizing ideas and designing solutions for them. In short, I really take great pleasure in building things and seeing them being utilized.</p>
-
-        </div>
-
-        <div class="bottom_card">
-          <h3 class="glow">Follow Me</h3>
-            <ul>
-                <li><a href="https://www.instagram.com/banjo_smuggler/"><i class="fa-brands fa-instagram "></i> </a></li>
-                <li><a href="https://www.linkedin.com/in/warren-wisbeach-b2a89698/" ><i class="fa-brands fa-linkedin"></i> </a></li>
-                <li><a href="https://www.linkedin.com/in/warren-wisbeach-b2a89698/" ><i class="fa-brands fa-linkedin"></i> </a></li>
-
-            </ul>
-          <div>
-            <br>
-
+    <br>
+    <div class="container">
+      <div class="intro_card">
+        <h1 class="glow">Web Developer Warren</h1>
+        <img src="./images/PXL_20210531_204914235.MP.jpg" alt="profile picture" id="profilepic">
+        <h2 class="glow">Click Below to see something Cool!</h2>
       </div>
     </div>
+
+       <div class="middle_card">
+          <p> I’ve come to realize over the years that the work I’ve been involved with has always consisted of elements of conceptualizing ideas and designing solutions for them. In short, I really take great pleasure in building things and seeing them being utilized..</p>
+          <a href="https://github.com/Wisbeach"><button id="button" onclick="this.textContent = 'You got me!'"><strong>Hit Me!</strong></button></a>
+       </div>
+
+       <div class="bottom_card">
+         <h3 class="glow">Follow Me</h3>
+          <ul>
+              <li><a href="https://www.instagram.com/banjo_smuggler/"><i class="fa-brands fa-instagram "></i> </a></li>
+              <li><a href="https://www.linkedin.com/in/warren-wisbeach-b2a89698/" ><i class="fa-brands fa-linkedin"></i> </a></li>
+              <li><a href ="github.com/Wisbeach" ><i class="fa-brands fa-github"></i></a> </li>
+          </ul>
+        <div>
+          <br>
+
+     </div>
   </body>
 </html>
 
