--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <br>
     <div class="container">
       <div class="intro_card">
-        <h1 class="glow">Hi, I'm Warren</h1>
-        <h2 class="glow">I am a Web Developer</h2>
+        <h1 class="glow">Web Developer Warren</h1>
         <img src="./images/PXL_20210531_204914235.MP.jpg" alt="profile picture" id="profilepic">
+        <h2 class="glow">Click Below to see something Cool!</h2>
       </div>
     </div>
 
        <div class="middle_card">
-          <p> I'm from the Southern Hemisphere, and currently on a path to change my career.</p>
+          <p> I’ve come to realize over the years that the work I’ve been involved with has always consisted of elements of conceptualizing ideas and designing solutions for them. In short, I really take great pleasure in building things and seeing them being utilized..</p>
           <a href="https://github.com/Wisbeach"><button id="button" onclick="this.textContent = 'You got me!'"><strong>Hit Me!</strong></button></a>
        </div>
 
