--- a/index.html
+++ b/index.html
@@ -11,21 +11,23 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
     <br>
     <div class="container">
       <div class="intro_card">
-        <h1 class="glow">Hi, I'm Warren</h1>
-        <h2 class="glow">I am a Web Developer</h2>
+        <h1 class="glow">Web Developer Warren</h1>
         <img src="./images/PXL_20210531_204914235.MP.jpg" alt="profile picture" id="profilepic">
+        <h2 class="glow">Click Below to see something Cool!</h2>
+
       </div>
     </div>
 
        <div class="middle_card">
-          <p> I'm from the Southern Hemisphere, and currently on a path to change my career.</p>
-          <a href="https://github.com/Wisbeach"><button id="button" onclick="this.textContent = 'You got me!'"><strong>Hit Me!</strong></button></a>
+          <p> I’ve come to realize over the years that the work I’ve been involved with has always consisted of elements of conceptualizing ideas and designing solutions for them. In short, I really take great pleasure in building things and seeing them being utilized..</p>
+          <a href="https://www.youtube.com/watch?v=70HLAFyOgnQ"><button id="button" onclick="this.textContent = 'You got me!'"><strong>Hit Me!</strong></button></a>
        </div>
 
        <div class="bottom_card">
