--- a/index.html
+++ b/index.html
@@ -1,31 +1,31 @@
+
 <!DOCTYPE html>
 
 
 <html>
   <head>
-      <title>Warren's Profile page</title>
-      <meta name="profile page" content="my profile page for front end challenge">
-      <link rel="stylesheet" href="style.css">
-      <meta charset="utf-8">
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-      <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Warren's Profile Page</title>
+    <meta name="profile page" content="my profile page for front end challenge">
+    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.2/css/all.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
-
+    <br>
     <div class="content">
-      <br>
         <div class="container">
           <div class="intro_card">
               <h1 class="glow">Web Developer Warren</h1>
                 <div class="profilepic-container">
-                  <img class="profilepic" src="./images/PXL_20210531_204914235.MP.jpg" alt="Profile picture">
-                  <img class="profilepic-hover" src="./images/HQRMNwDxExd92PMSb2VR--2--bhix6_4x.jpg" alt=" 2nd Profile picture">
+                  <img class="profilepic" src="./images/HQRMNwDxExd92PMSb2VR--2--bhix6_4x.jpg" alt="Profile picture">
+                  <img class="profilepic-hover" src=./images/PXL_20210531_204914235.MP.jpg alt=" 2nd Profile picture">
                 </div>
-              <h2 class="glow">Tap Below to see something Cool!</h2>
+              <h2 class="glow">Click Below to see something Cool!</h2>
               <a href="https://www.youtube.com/watch?v=70HLAFyOgnQ"><button class="fingerprint-button" onclick="this.textContent = 'You got me!'"><img src="./images/fingerprint2.png" alt="Fingerprint"/></button></a>
           </div>
         </div>
@@ -37,7 +37,7 @@
             <div class="bottom_card">
              <h3 class="glow">Follow Me</h3>
               <ul>
-                 <li><a href="https://www.instagram.com/banjo_smuggler/"><i class="fa-brands fa-instagram "></i> </a></li>
+                  <li><a href="https://www.instagram.com/banjo_smuggler/"><i class="fa-brands fa-instagram "></i> </a></li>
                   <li><a href="https://www.linkedin.com/in/warren-wisbeach-b2a89698/" ><i class="fa-brands fa-linkedin"></i> </a></li>
                   <li><a href ="github.com/Wisbeach" ><i class="fa-brands fa-github"></i></a> </li>
               </ul>
