--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <ul>
                   <li><a href="https://www.instagram.com/banjo_smuggler/"><i class="fa-brands fa-instagram "></i> </a></li>
                   <li><a href="https://www.linkedin.com/in/warren-wisbeach-b2a89698/" ><i class="fa-brands fa-linkedin"></i> </a></li>
-                  <li><a href ="github.com/Wisbeach" ><i class="fa-brands fa-github"></i></a> </li>
+                  <li><a href ="https://github.com/Wisbeach" ><i class="fa-brands fa-github"></i></a> </li>
               </ul>
            <div>
             <br>
