final changes 12 August

--- a/about.html
+++ b/about.html
@@ -11,19 +11,12 @@
 </head>
 <body class="about-background">
   <div class="about-page">
-        <h1>About Warren</h1>
-        Introducing Warren, the aspiring tech explorer venturing into the fascinating realm of web development! 🚀
+        <h1>Who Am I?</h1>
+        Hey there, I'm Warren Wisbeach – a web developer residing in London. My coding escapade kicked off when I dived headfirst into the immersive world of Le Wagon. This dynamic course laid the groundwork for my web development prowess, but believe me, I'm just getting warmed up.
+        In a realm where change is the only constant, I'm all about riding the waves of innovation. Web development isn't just a skill for me – it's an ever-evolving canvas for creativity. From sleek interfaces that dance on your screen to user experiences that feel like a breeze, I'm here to make digital magic.
+        But what truly makes my heart race? It's the thrill of turning a spark of an idea into a full-blown digital reality. Watching my creations shape the online world and seeing people engage with them? Now, that's the ultimate high.
+       
 
-    With his skateboard by his side and dreams of conquering code waves, Warren is just getting started on his journey. While he's still finding his footing in the tech world, he's already making strides with his determination and enthusiasm. 🏄‍♂️💻
-
-    Though public speaking might make him a bit wobbly, Warren knows that learning is all about embracing challenges and riding the waves of growth. Imposter syndrome may try to sneak in, but he's not letting it slow him down!
-
-    As he navigates through the vast sea of coding possibilities, Warren's heart soars with excitement when he brings ideas to life and sees even the tiniest progress. 💡
-
-    From crafting small snippets of code to unraveling intricate web solutions, Warren is thrilled by every step he takes, knowing it's part of his journey to becoming a coding maestro.
-
-    So, if you're seeking a tech enthusiast with a passion for skateboarding and a beginner's thirst for knowledge, Warren is your friendly neighborhood coding explorer! Join him as he embarks on a thrilling quest to weave his tech magic, one line of code at a time! 🌟
-  </div>
   <div class="modal">
     <div class="modal-content"></div>
   </div>
