--- a/projects.html
+++ b/projects.html
@@ -12,28 +12,32 @@
 <body class="project-background">
   <div class="project-page">
     <h1>Projects</h1>
-    <p>Welcome to our website! We are a passionate team of developers committed to creating innovative web solutions. Our mission is to build amazing websites that make a difference in people's lives.</p>
-    <p>Our expertise includes web development, user experience design, and front-end and back-end technologies. We love what we do, and we are excited to share our work with the world.</p>
+    <p></p>
+    <p></p>
 
-    <h2>Project 1: Website Redesign</h2>
+    <h3>Project 1: Treasure Islands</h3>
     <p>
-      Description: We redesigned a client's website to improve its user experience and modernize its appearance. The new design features a responsive layout and enhanced navigation.
+      Description: We created an AirBnB clone. Rent your own private island.
       <br>
-      Link: <a href="https://www.example-project1.com">Example Project 1</a>
+      Link: <a href="https://treasure-islands.herokuapp.com/">Treasure-Islands</a>
     </p>
 
-    <h2>Project 2: E-commerce Platform</h2>
+    <h3>Project 2: The Curious Humans Network</h3>
     <p>
-      Description: Our team developed a fully functional e-commerce platform for a local business. The platform includes product listings, shopping cart, and secure payment processing.
+      Description: This is a platform from where you can explore the human experience and discover and book events and activities in your local area in London.</p>
+      <p>The idea is to promote positive mental health and curiosity by offering interesting ways to be in the present moment while also hopefully connecting with like-minded individuals</p>
+      <p>
+        One of the special features we built for this platform is a navigation menu with each category assigned a specific colour. When A specific colour is chosen the user will be shown suggestions of activities related to that colour.
+      </p>
       <br>
-      Link: <a href="https://www.example-project2.com">Example Project 2</a>
+      Link: <a href="https://curious-humans-network.herokuapp.com/">Curious Humans Network</a>
     </p>
 
-    <h2>Project 3: Blogging Website</h2>
+    <h3>Project 3: Chapter Surfcraft (under construction)</h3>
     <p>
-      Description: We created a blogging website where users can sign up, create posts, and interact with other users' content. The website features a user-friendly interface and a comment system.
+      Description: Website for Liam the surfcraft builder based in Prague.
       <br>
-      Link: <a href="https://www.example-project3.com">Example Project 3</a>
+      Link: <a href="https://wisbeach.github.io/Chapter-surfcraft/">Chapter Surfcraft</a>
     </p>
 
     <!-- You can add more project descriptions and links as needed -->
