fingerprint button update

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                   <img class="profilepic-hover" src=./images/PXL_20210531_204914235.MP.jpg alt=" 2nd Profile picture">
                 </div>
               <h2 class="glow">Click Below to see something Cool!</h2>
-              <a href="https://curious-humans-network.herokuapp.com/"><button class="fingerprint-button" onclick="this.textContent = 'You got me!'"><img src="./images/fingerprint2.png" alt="Fingerprint"/></button></a>
+              <a href="https://youtu.be/70HLAFyOgnQ"><button class="fingerprint-button" onclick="this.textContent = 'You got me!'"><img src="./images/fingerprint2.png" alt="Fingerprint"/></button></a>
           </div>
         </div>
         <div class="middle_card">
