--- a/about.html
+++ b/about.html
@@ -12,10 +12,12 @@
 <body class="about-background">
   <div class="about-page">
         <h1>Who Am I?</h1>
-        Hey there, I'm Warren Wisbeach – a web developer residing in London. My coding escapade kicked off when I dived headfirst into the immersive world of Le Wagon. This dynamic course laid the groundwork for my web development prowess, but believe me, I'm just getting warmed up.
-        In a realm where change is the only constant, I'm all about riding the waves of innovation. Web development isn't just a skill for me – it's an ever-evolving canvas for creativity. From sleek interfaces that dance on your screen to user experiences that feel like a breeze, I'm here to make digital magic.
-        But what truly makes my heart race? It's the thrill of turning a spark of an idea into a full-blown digital reality. Watching my creations shape the online world and seeing people engage with them? Now, that's the ultimate high.
-       
+
+<p>Hey there, I'm Warren Wisbeach – a web developer based in London. My journey into the world of coding began with an immersive experience at Le Wagon. This transformative course provided me with a strong foundation in web development, but I can honestly say that I'm just scratching the surface.</p>
+
+<p>In a field where change is the only constant, I thrive on embracing innovation and staying at the forefront of technology. Web development isn't merely a skill for me; it's a constantly evolving canvas for my creativity. Whether it's crafting sleek interfaces that come to life on your screen or designing user experiences that feel effortless, I'm passionate about weaving digital magic.</p>
+
+<p>Yet, what truly ignites my enthusiasm is the process of taking a spark of an idea and turning it into a fully realized digital creation. Witnessing my projects shape the online world and witnessing people engage with them gives me an indescribable sense of fulfillment. That's the genuine thrill I find in what I do.</p>
 
   <div class="modal">
     <div class="modal-content"></div>
