--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=0.8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src="index.js"></script>
   </head>
@@ -20,7 +20,7 @@
   <body>
     <br>
     <div class="content">
-        <div class="container">
+      <div class="container">
           <div class="intro_card">
               <h1 class="glow">Web Developer Warren</h1>
                 <div class="profilepic-container">
@@ -30,15 +30,23 @@
               <h2 class="glow">Click Below to see something Cool!</h2>
               <a href="https://youtu.be/70HLAFyOgnQ"><button class="fingerprint-button" onclick="this.textContent = 'You got me!'"><img src="./images/fingerprint2.png" alt="Fingerprint"/></button></a>
           </div>
-        </div>
-        <div class="middle_card">
-          <ul class="glow">
-            <li><a href="#" data-toggle="modal" data-target="#aboutModal" onclick="loadContent('about.html');"><h3>About</h3></a></li>
-            <li><a href="#" data-toggle="modal" data-target="#projectsModal" onclick="loadContent('projects.html');"><h3>Projects</h3></a></li>
-            <li><a href="mailto:warren.wisbeach@gmail.com"><h3>Contact</h3></a></li>
-          </ul>
-        </div>
       </div>
+      <div class="middle_card_container">
+        <div class="middle_card">
+          <div>
+            <div class="item-1 item"><a href="#" data-toggle="modal" data-target="#aboutModal" onclick="loadContent('about.html');"><h3 class="glow">About</h3></a></div>
+          </div>
+          <div></div>
+          <div>
+            <div class="item-2 item"><a href="#" data-toggle="modal" data-target="#projectsModal" onclick="loadContent('projects.html');"><h3 class="glow">Projects</h3></a></div>
+          </div>
+          <div></div>
+          <div>
+            <div class="item-3 item"><a href="mailto:warren.wisbeach@gmail.com"><h3 class="glow" >Contact</h3></a></div>
+          </div>
+        </div>
+    </div>
+
     </div>
 
     <!-- About Modal -->
@@ -55,13 +63,19 @@
       </div>
     </div>
           <div class="bottom_card_container">
-              <div class="bottom_card">
-              <h3 class="glow">Follow Me</h3>
-                <ul>
-                    <li><a href="https://www.instagram.com/banjo_smuggler/"><i class="fa-brands fa-instagram "></i> </a></li>
-                    <li><a href="https://www.linkedin.com/in/warren-wisbeach-b2a89698/" ><i class="fa-brands fa-linkedin"></i> </a></li>
-                    <li><a href ="https://github.com/Wisbeach" ><i class="fa-brands fa-github"></i></a> </li>
-                </ul>
+            <div class="bottom_card">
+
+                <h3 class="glow">Follow Me</h3>
+
+              <div>
+                <div>
+                  <ul>
+                      <li><a href="https://www.instagram.com/banjo_smuggler/"><i class="fa-brands fa-instagram "></i> </a></li>
+                      <li><a href="https://www.linkedin.com/in/warren-wisbeach-b2a89698/" ><i class="fa-brands fa-linkedin"></i> </a></li>
+                      <li><a href ="https://github.com/Wisbeach" ><i class="fa-brands fa-github"></i></a> </li>
+                  </ul>
+                </div>
+              </div>
             <div>
           </div>
               <br>
